# inkarta

./: .gitignore  .gitmodules  .ignore  README.md  process.py
app/Inkarta/Inkarta/: Info.plist  InkartaApp.swift  Utils.swift
app/Inkarta/Inkarta.xcodeproj/: project.pbxproj
app/Inkarta/Inkarta.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
app/Inkarta/Inkarta.xcodeproj/xcshareddata/xcschemes/: Inkarta.xcscheme
app/Inkarta/Inkarta/Models/: Artwork.swift  Endpoint.swift  ErrorAlert.swift
app/Inkarta/Inkarta/View Models/: DetailViewModel.swift  GalleryViewModel.swift  UploadViewModel.swift
app/Inkarta/Inkarta/Views/: DetailView.swift  GalleryView.swift  UploadView.swift
app/Inkasso/Inkasso/: InkassoApp.swift  Utils.swift
app/Inkasso/Inkasso.xcodeproj/: project.pbxproj
app/Inkasso/Inkasso.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
app/Inkasso/Inkasso.xcodeproj/xcshareddata/xcschemes/: Inkasso.xcscheme
app/Inkasso/Inkasso/Assets.xcassets/AppIcon.appiconset/: Contents.json
app/Inkasso/Inkasso/Models/: Artwork.swift  Endpoint.swift  ErrorAlert.swift
app/Inkasso/Inkasso/View Models/: DetailViewModel.swift  GalleryViewModel.swift  UploadViewModel.swift
app/Inkasso/Inkasso/Views/: DetailView.swift  GalleryView.swift  UploadView.swift
app/Picosso/Picosso/: Art.swift  DetailView.swift  DetailViewModel.swift  GalleryView.swift  GalleryViewModel.swift  PicossoApp.swift  UploadView.swift  UploadViewModel.swift  Utils.swift
app/Picosso/Picosso.xcodeproj/: project.pbxproj
app/Picosso/Picosso/Models/: Artwork.swift  Endpoint.swift  ErrorAlert.swift
app/Picosso/Picosso/View Models/: DetailViewModel.swift  GalleryViewModel.swift
app/Picosso/Picosso/Views/: DetailView.swift  GalleryView.swift  UploadView.swift
inkplate/: .clang-format  inkplate.ino  main.py  run.sh  sketch.yaml
pico/: .clang-format  CMakeLists.txt  main.cpp
pico/src/: main.cpp  test.cpp
server/: .air.toml  .env  .env.development  .gitignore  Cargo.toml  Makefile  app.py  bacon.toml  deploy.sh  go.mod  go.sum  inkarta.service  main.go  pm2.config.js  query.sql  schema.sql  sqlc.yaml
server/.mise/: config.toml
server/.mise/tasks/: build  clean  database  deploy  format
server/cmd/inkarta/: main.go
server/deploy/: .env.production  inkarta.service
server/init/: inkarta.service
server/internal/database/: models.go  query.sql.go
server/internal/db/: connection.go  models.go  query.sql  query.sql.go
server/internal/image/: image.go
server/internal/routes/: routes.go
server/public/: styles.css
server/scripts/: api.hurl  bootstrap  deploy  develop  test
server/src/: db.rs  lib.rs  main.rs  model.rs  repository.rs  state.rs  utils.rs
server/src/routes/: device.rs  frame.rs  image.rs  mod.rs  setting.rs  ui.rs
server/src/templates/: base.jinja
server/static/css/: base.css
server/templates/: 404.jinja  base.html  base.jinja  error.jinja  index.html  index.jinja  index.tmpl  layout.jinja  modal.jinja  upload.html  upload.tmpl  view.html  view.jinja  view.tmpl
server/templates/partials/: device.jinja  frame.jinja  image.jinja  settings.jinja  upload.jinja
server/tests/: device.hurl  image.hurl  views.hurl
